--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-server.port = 8081
-
+server.port=8081
+keycloak.realm=spring-app-demo-realm
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.resource=products-app
+keycloak.public-client=true
+keycloak.bearer-only=true
