--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.resource=products-app
 keycloak.public-client=true
 keycloak.bearer-only=true
+keycloak.principal-attribute=preferred_username
+
+spring.jackson.property-naming-strategy=SNAKE_CASE
